erDiagram
  USUARIOS {
    int id PK
    varchar nombre_usuario UK
    varchar hash_contrasena
    varchar correo
    varchar nombre_completo
    varchar rol
    bool activo
    datetime fecha_creacion
    datetime fecha_actualizacion
  }

  CATEGORIAS {
    int id PK
    varchar nombre
    varchar descripcion
    bool activo
    datetime fecha_creacion
  }

  PRODUCTOS {
    int id PK
    varchar nombre
    varchar marca
    int categoria_id FK
    varchar talla
    decimal precio
    decimal precio_oferta
    int stock
    varchar url_imagen
    bool activo
    datetime fecha_creacion
    datetime fecha_actualizacion
  }

  VARIANTES_PRODUCTO {
    int id PK
    int producto_id FK
    varchar talla
    int stock
    bool activo
    datetime fecha_creacion
    datetime fecha_actualizacion
  }

  CLIENTES {
    int id PK
    varchar nombre_completo
    varchar numero_documento UK
    varchar telefono
    varchar correo
    bool activo
  }

  PROVEEDORES {
    int id PK
    varchar razon_social
    varchar nombre_contacto
    varchar numero_documento UK
    varchar telefono
    varchar correo
    bool activo
  }

  VENTAS {
    int id PK
    int cliente_id FK
    int usuario_id FK
    datetime fecha_venta
    decimal total
    varchar estado
  }

  DETALLE_VENTAS {
    int id PK
    int venta_id FK
    int producto_id FK
    int variante_id FK
    int cantidad
    decimal precio_unitario
    decimal subtotal
  }

  COMPRAS {
    int id PK
    int proveedor_id FK
    int usuario_id FK
    datetime fecha_compra
    decimal total
    varchar estado
    varchar numero_factura UK
  }

  DETALLE_COMPRAS {
    int id PK
    int compra_id FK
    int producto_id FK
    int variante_id FK
    int cantidad
    decimal costo_unitario
    decimal subtotal
  }

  CLIENTES_ECOMMERCE {
    int id PK
    varchar correo UK
    varchar hash_contrasena
    varchar nombre_completo
    varchar telefono
    varchar numero_documento
    varchar direccion
    bool activo
    bool correo_verificado
    varchar token_recuperacion
    datetime expiracion_recuperacion
  }

  PEDIDOS {
    int id PK
    int cliente_ecommerce_id FK
    varchar numero_pedido UK
    varchar nombre_completo_cliente
    varchar correo_cliente
    decimal subtotal
    decimal costo_envio
    decimal total
    varchar metodo_pago
    varchar estado_pago
    varchar estado_pedido
    datetime fecha_pedido
    datetime fecha_procesado
    datetime fecha_enviado
    datetime fecha_entregado
  }

  DETALLE_PEDIDOS {
    int id PK
    int pedido_id FK
    int producto_id FK
    int variante_id FK
    varchar nombre_producto
    varchar talla_producto
    int cantidad
    decimal precio_unitario
    decimal subtotal
  }

  AUDIT_LOGS {
    int id PK
    int usuario_id
    varchar accion
    varchar entidad
    int entidad_id
    datetime fecha_utc
  }

  CATEGORIAS ||--o{ PRODUCTOS : clasifica
  PRODUCTOS ||--o{ VARIANTES_PRODUCTO : tiene

  CLIENTES ||--o{ VENTAS : compra
  USUARIOS ||--o{ VENTAS : registra
  VENTAS ||--o{ DETALLE_VENTAS : contiene
  PRODUCTOS ||--o{ DETALLE_VENTAS : item
  VARIANTES_PRODUCTO ||--o{ DETALLE_VENTAS : talla

  PROVEEDORES ||--o{ COMPRAS : abastece
  USUARIOS ||--o{ COMPRAS : registra
  COMPRAS ||--o{ DETALLE_COMPRAS : contiene
  PRODUCTOS ||--o{ DETALLE_COMPRAS : item
  VARIANTES_PRODUCTO ||--o{ DETALLE_COMPRAS : talla

  CLIENTES_ECOMMERCE ||--o{ PEDIDOS : realiza
  PEDIDOS ||--o{ DETALLE_PEDIDOS : contiene
  PRODUCTOS ||--o{ DETALLE_PEDIDOS : item
  VARIANTES_PRODUCTO ||--o{ DETALLE_PEDIDOS : talla
